[package]
name = "rew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
egg = "0.9.5"
flat_vec = "0.1.0"
num = "0.4.1"
num-rational = "0.4.1"
num-traits = "0.2.16"
